Search nästan klar

--- a/src/index.css
+++ b/src/index.css
@@ -172,7 +172,8 @@ html,body {
 .exploreSmallYoutube{
     width:280px;
     height: 157.5px;
-	margin-bottom: 1%;
+    margin-top: 3%;
+	margin-bottom: 3%;
     -webkit-transition-property: height, width;
     -webkit-transition-duration: 0.5s;
     -moz-transition-property: height, width;
@@ -190,18 +191,23 @@ html,body {
     -moz-transition-duration: 0.5s;
     transition-property: height, width;
     transition-duration: 0.5s;
+
 }
 
 
 .exploreSmallYoutube:hover ~ .exploreSmallYoutube{
-    width: 224px;
-    height: 126px;
+    
     -webkit-transition-property: height, width;
     -webkit-transition-duration: 0.5s;
     -moz-transition-property: height, width;
     -moz-transition-duration: 0.5s;
     transition-property: height, width;
     transition-duration: 0.5s;
+    transform: translate(3em,0);
+  -webkit-transform: translate(3em,0);
+  -moz-transform: translate(3em,0);
+  -o-transform: translate(3em,0);
+  -ms-transform: translate(3em,0);
 }
 
 
@@ -235,4 +241,3 @@ html,body {
 	margin-right: auto;
 	width: 25%;
 	}
-	
