--- a/src/index.css
+++ b/src/index.css
@@ -1,78 +1,78 @@
 html,body {
-	font-family: 'Lato', sans-serif;
-	background: #f0d0b9;
+font-family: 'Lato', sans-serif;
+background: #f0d0b9;
 
 }
 
 #profilePicture{
-	width: 250px;
-	height: 250px;
-	border-radius: 50%;
-	object-fit: cover;
-	margin-top: 30px;
+width: 250px;
+height: 250px;
+border-radius: 50%;
+object-fit: cover;
+margin-top: 30px;
 }
 #profileName{
-	margin-top: 100px;
-	font-size: 50px;
+margin-top: 100px;
+font-size: 50px;
 }
 
 .profileThumbnail{
-	width: 200px;
-	height:130px;
-	border: 0.5px solid #ddd; /* Gray border */
-    border-radius: 3px;  /* Rounded border */
-    padding: 3px; /* Some padding */
+width: 200px;
+height:130px;
+border: 0.5px solid #ddd; /* Gray border */
+border-radius: 3px;  /* Rounded border */
+padding: 3px; /* Some padding */
 }
 
 .profileThumbnail:hover{
-	width: 200px;
-	height:130px;
-	box-shadow: 0 0 2px 1px rgba(220,220,220,1);
+width: 200px;
+height:130px;
+box-shadow: 0 0 2px 1px rgba(220,220,220,1);
 
 }
 
 #profileVideosAreaLeft{
-	margin-top: 50px;
-	margin-left: -30px;
+margin-top: 50px;
+margin-left: -30px;
 }
 
 #profileVideosAreaRight{
-	margin-top: 50px;
-	margin-left: -30px;
+margin-top: 50px;
+margin-left: -30px;
 }
 
 #profileVideosAreaLeftBottom{
-	margin-top: 20px;
+margin-top: 20px;
 }
 
 #editPicture{
-	margin-left: 65px;
+margin-left: 65px;
 }
 
 .editProfileFields{
-	border: 2px;
+border: 2px;
 }
 
 .videoCategory{
-	position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    /*background-image:
-        linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-        url('//spin.atomicobject.com/wp-content/uploads/20170324102432/portfolio-tips-feature-image.jpg');*/
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+/*background-image:
+    linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url('//spin.atomicobject.com/wp-content/uploads/20170324102432/portfolio-tips-feature-image.jpg');*/
 }
 
 .video_area{
-	 position: relative;
-    text-align: center;
+	position: relative;
+	text-align: center;
 
 }
 /*h4{
-	position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
 }*/
 
 .editProfileButtonArea{
@@ -97,7 +97,9 @@ html,body {
 }
 
 .input-group{
-	margin-left: 325px;
+	margin-left: 300px;
+	margin-top: 8px;
+	width: 300px;
 }
 .navbarIcons{
 	margin-left: 950px;
@@ -108,6 +110,17 @@ html,body {
 	margin-top: 15px;
 	margin-right: 40px;
 	font-size: 30px;
+	color: #d6d6d6;
+
+}
+
+.material-icons:hover{
+	color: #8e8e8e;
+}
+
+
+.material-icons:active{
+	color: #8e8e8e;
 }
 
 .input-group-btn{
@@ -116,7 +129,7 @@ html,body {
 
 .carouselArea{
 	margin-top: 20px;
-	margin-left: 100px;
+	margin-left: 90px;
 }
 
 .youtube{
@@ -141,7 +154,7 @@ html,body {
 }
 
 #signup {
-		text-align: center;
+	text-align: center;
 }
 
 .actionButton {
@@ -160,79 +173,92 @@ html,body {
 }
 
 .SelectProfile {
-		margin-top: 50px;
+	margin-top: 50px;
 }
 
 .Profile {
-		margin-top: 70px;
+	margin-top: 70px;
 }
 
 /* Flow.js */
 
 .exploreSmallYoutube{
-    width:280px;
-    height: 157.5px;
-    margin-top: 3%;
+	width:280px;
+	height: 157.5px;
+	margin-top: 3%;
 	margin-bottom: 3%;
-    -webkit-transition-property: height, width;
-    -webkit-transition-duration: 0.5s;
-    -moz-transition-property: height, width;
-    -moz-transition-duration: 0.5s;
-    transition-property: height, width;
-    transition-duration: 0.5s;
+	-webkit-transition-property: height, width;
+	-webkit-transition-duration: 0.5s;
+	-moz-transition-property: height, width;
+	-moz-transition-duration: 0.5s;
+	transition-property: height, width;
+	transition-duration: 0.5s;
 }
 
 .exploreSmallYoutube:hover {
-    width: 336px;
-    height: 189px;
-    -webkit-transition-property: height, width;
-    -webkit-transition-duration: 0.5s;
-    -moz-transition-property: height, width;
-    -moz-transition-duration: 0.5s;
-    transition-property: height, width;
-    transition-duration: 0.5s;
+	width: 336px;
+	height: 189px;
+	-webkit-transition-property: height, width;
+	-webkit-transition-duration: 0.5s;
+	-moz-transition-property: height, width;
+	-moz-transition-duration: 0.5s;
+	transition-property: height, width;
+	transition-duration: 0.5s;
 
 }
 
 
 .exploreSmallYoutube:hover ~ .exploreSmallYoutube{
-    
-    -webkit-transition-property: height, width;
-    -webkit-transition-duration: 0.5s;
-    -moz-transition-property: height, width;
-    -moz-transition-duration: 0.5s;
-    transition-property: height, width;
-    transition-duration: 0.5s;
-    transform: translate(3em,0);
-  -webkit-transform: translate(3em,0);
-  -moz-transform: translate(3em,0);
-  -o-transform: translate(3em,0);
-  -ms-transform: translate(3em,0);
+	-webkit-transition-property: height, width;
+	-webkit-transition-duration: 0.5s;
+	-moz-transition-property: height, width;
+	-moz-transition-duration: 0.5s;
+	transition-property: height, width;
+	transition-duration: 0.5s;
+	transform: translate(3em,0);
+	-webkit-transform: translate(3em,0);
+	-moz-transform: translate(3em,0);
+	-o-transform: translate(3em,0);
+	-ms-transform: translate(3em,0);
+}
+
+div ~ .exploreSmallYoutube + .exploreSmallYoutube:hover {
+	-webkit-transition-property: height, width;
+	-webkit-transition-duration: 0.5s;
+	-moz-transition-property: height, width;
+	-moz-transition-duration: 0.5s;
+	transition-property: height, width;
+	transition-duration: 0.5s;
+	transform: translate(3em,0);
+	-webkit-transform: translate(3em,0);
+	-moz-transform: translate(3em,0);
+	-o-transform: translate(3em,0);
+	-ms-transform: translate(3em,0);
 }
 
 
 
 .exploreSmallYoutube:onMouseLeave {
-    width: 280px;
-    height: 157.5px;
-    -webkit-transition-property: height, width;
-    -webkit-transition-duration: 0.5s;
-    -moz-transition-property: height, width;
-    -moz-transition-duration: 0.5s;
-    transition-property: height, width;
-    transition-duration: 0.5s;
+	width: 280px;
+	height: 157.5px;
+	-webkit-transition-property: height, width;
+	-webkit-transition-duration: 0.5s;
+	-moz-transition-property: height, width;
+	-moz-transition-duration: 0.5s;
+	transition-property: height, width;
+	transition-duration: 0.5s;
 }
 
 
 .exploreSmallYoutube:onMouseLeave ~ .exploreSmallYoutube{
-    width: 280px;
-    height: 157.5px;
-    -webkit-transition-property: height, width;
-    -webkit-transition-duration: 0.5s;
-    -moz-transition-property: height, width;
-    -moz-transition-duration: 0.5s;
-    transition-property: height, width;
-    transition-duration: 0.5s;
+	width: 280px;
+	height: 157.5px;
+	-webkit-transition-property: height, width;
+	-webkit-transition-duration: 0.5s;
+	-moz-transition-property: height, width;
+	-moz-transition-duration: 0.5s;
+	transition-property: height, width;
+	transition-duration: 0.5s;
 }
 
 #file {
@@ -240,4 +266,6 @@ html,body {
 	margin-left: auto;
 	margin-right: auto;
 	width: 25%;
-	}
+}
+
+
