--- a/src/index.css
+++ b/src/index.css
@@ -407,6 +407,16 @@ div ~ .exploreSmallYoutube + .exploreSmallYoutube:hover {
 	border: 0.5px solid #262626;
 }
 
+.shareButtonProfile {
+	width: 100%;
+	height: 60px;
+	margin-top: -5px;
+	opacity: 100%;
+	background-color: #3a3a3a;
+	color: #d6d6d6;
+	border: 0.5px solid #262626;
+}
+
 .friendFlowArea{
 	margin-top: 100px;
 }
