--- a/src/index.css
+++ b/src/index.css
@@ -190,7 +190,7 @@ transform: translate(-50%, -50%);
 }
 
 .Profile {
-		margin-top: 0px;
+		margin-top: 50px;
 }
 
 /* Flow.js */
@@ -407,12 +407,29 @@ div ~ .exploreSmallYoutube + .exploreSmallYoutube:hover {
 	border: 0.5px solid #262626;
 }
 
+.shareButtonProfile {
+	width: 100%;
+	height: 60px;
+	margin-top: -5px;
+	opacity: 100%;
+	background-color: #3a3a3a;
+	color: #d6d6d6;
+	border: 0.5px solid #262626;
+}
+
+.removeShareButton {
+	opacity: 100%;
+	background-color: #3a3a3a;
+	color: #d6d6d6;
+	border: 0.5px solid #262626;
+}
+
 .friendFlowArea{
 	margin-top: 100px;
 }
 
 .youtubePostHead {
-	margin-bottom: 30px;
+	margin-bottom: 5px;
 }
 
 .youtubePostVideo{
