--- a/src/index.css
+++ b/src/index.css
@@ -429,7 +429,8 @@ div ~ .exploreSmallYoutube + .exploreSmallYoutube:hover {
 }
 
 .youtubePostHead {
-	margin-bottom: 5px;
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 .youtubePostVideo{
@@ -438,4 +439,23 @@ div ~ .exploreSmallYoutube + .exploreSmallYoutube:hover {
 
 .FlowVertical {
 	margin-top: 70px;
+}
+
+.followButtons{
+	margin-top: 20px;
+}
+
+.ProfilePictureArea{
+	margin-top: 40px;
+	margin-left: -50px;
+}
+
+.glyphicon-cog{
+	margin-left: 30px;
+}
+
+#follow{
+	width: 100px;
+	font-size: 12px;
+	height: 50px;
 }
