--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@ margin-top: 30px;
 	text-align: center;
 	display: block;
 	margin: 0px;
+	color: #d6d6d6;
 
 }
 
@@ -429,8 +430,9 @@ div ~ .exploreSmallYoutube + .exploreSmallYoutube:hover {
 }
 
 .youtubePostHead {
-	margin-top: 20px;
-	margin-bottom: 20px;
+	margin-top: 30px;
+	margin-bottom: 60px;
+	margin-left: 150px;
 }
 
 .youtubePostVideo{
@@ -458,4 +460,8 @@ div ~ .exploreSmallYoutube + .exploreSmallYoutube:hover {
 	width: 100px;
 	font-size: 12px;
 	height: 50px;
+}
+
+#youtubePostButton {
+	margin-bottom: 40px;
 }
