--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,3 @@
-
-@media (orientation: portrait) {
-  body {
-    -webkit-transform: rotate(-90deg);
-    -moz-transform: rotate(-90deg);
-    -o-transform: rotate(-90deg);
-    -ms-transform: rotate(-90deg);
-    transform: rotate(-90deg);
-  }
-}
 html,body {
 	font-family: 'Lato', sans-serif;
 	background: #f0d0b9;
@@ -113,10 +103,8 @@ html,body {
 }
 
 .jumbotron {
-	margin-top: 0%;
+	margin-top: 20%;
 	background-color: white;
-	width: 80%;
-	height: 80%;
 }
 
 .emptyResText {
@@ -127,8 +115,8 @@ html,body {
 }
 
 #logInButton {
-	height: 20%;
-	width: 40%;
+	height: 30%;
+	width: 70%;
 	background-color: #c8d9ec;
 	border-radius: 5px;
 	padding: 10px;
@@ -476,4 +464,8 @@ html,body {
 
 #dropdownelements:hover{
 	color: #8e8e8e;
+}
+
+#welcomeJumbotron{
+	height: 80vh;
 }
