--- a/src/index.css
+++ b/src/index.css
@@ -56,15 +56,16 @@ html,body {
 }
 
 .input-group{
-	margin-left: 300px;
-	margin-top: 8px;
-	width: 300px;
+	margin-left: 11%;
+	margin-top: 0;
+	width: 80%;
 }
 
 .material-icons{
-	margin-top: 15px;
-	margin-right: 40px;
-	font-size: 30px;
+	margin-top: 0px;
+	margin-left: 20px;
+	margin-right: 30%;
+	font-size: 25px;
 	color: #d6d6d6;
 
 }
