centrering av logga

--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,8 @@ html,body {
 }
 
 #logo{
-	margin-top: -25px;
+	margin-top: -15px;
+	margin-left: 80%;
 	padding: 0px;
 	width: 130px;
 	height: 65px;
