--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,14 @@ html,body {
 	margin-left: 38%;
 }
 
+#sigupPicture{
+	width: 250px;
+	height: 250px;
+	border-radius: 50%;
+	object-fit: cover;
+	margin-top: 30px;
+}
+
 .profilePictureSmall {
 	width: 160px;
 	height: 130px;
@@ -337,7 +345,7 @@ html,body {
 }
 
 .followButtons{
-	margin-top: 20px;
+	margin-top: 50px;
 }
 
 .ProfilePictureArea{
@@ -437,9 +445,10 @@ html,body {
 
 .changeProfilePicUndertext {
 	color: #d6d6d6;
-	font-size: 14px;
+	font-size: 10px;
 	float: center;
 	font-style: italic;
+	margin-left: 5%;
 }
 
 .collapse{
@@ -470,4 +479,10 @@ html,body {
 
 #welcomeJumbotron{
 	height: 80vh;
+}
+
+.changeProfilePic{
+	margin-top: 5%;
+	margin-left: 20%;
+	font-size: 15px;
 }
