--- a/src/index.css
+++ b/src/index.css
@@ -489,6 +489,48 @@ html,body {
 	color: white;
 }
 
+.footer {
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 10%;
+	background-color: white;
+	color: white;
+	text-align: center;
+	border-top: 2px solid #4B4B4B;
+}
+
+.inputMessage {
+	width: 60%;
+	text-align: left;
+	font-size: 22px;
+	padding: 5px;
+	display: inline-block;
+	border: 1px solid #4B4B4B;
+	border-radius: 4px;
+	box-sizing: border-box;
+	color: black;
+	margin-left: -5%;
+	margin-top: 2%;
+}
+
+textarea:focus, input:focus{
+    outline: none;
+}
+
+.submitButton {
+	width: 15%;
+	border: 1px solid #4B4B4B;
+	height: 38px;
+	padding: 5px;
+	margin-left: 3%;
+	background-color: #3a3a3a;
+	color: #d6d6d6;
+	border: 0.5px solid #262626;
+	border-radius: 4px;
+}
+
 #welcomeJumbotron{
-	height: 80vh;
+		height: 80vh;
 }
