--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ html,body {
 	margin-top: 30px;
 }
 
-.profilePictureSmall {
+#profilePictureSmall {
 	width: 160px;
 	height: 130px;
 	border-radius: 50%;
