--- a/src/index.css
+++ b/src/index.css
@@ -47,17 +47,17 @@ html,body {
 }
 
 #logo{
-	margin-top: -15px;
-	margin-left: 80%;
+	margin-top: -18px;
+	margin-left: 100%;
 	padding: 0px;
-	width: 130px;
-	height: 65px;
+	width: 110px;
+	height: 50px;
 }
 
 .navbar{
 	background-color: white;
 	margin-top: 0px;
-	height: 70px;
+	height: 50px;
 	border-width: 2px;
 	color: #d1d1d1;
 	border-color: #d1d1d1;
@@ -513,16 +513,13 @@ html,body {
 }
 
 .inputMessage {
-	width: 60%;
-	text-align: left;
-	font-size: 22px;
+
+	font-size: 20px;
 	padding: 5px;
-	display: inline-block;
 	border: 1px solid #4B4B4B;
 	border-radius: 4px;
 	box-sizing: border-box;
 	color: black;
-	margin-left: -5%;
 	margin-top: 2%;
 }
 
@@ -531,11 +528,13 @@ textarea:focus, input:focus{
 }
 
 .submitButton {
-	width: 15%;
 	border: 1px solid #4B4B4B;
-	height: 38px;
+	font-size: 20px;
 	padding: 5px;
+	padding-left: 10px;
+	padding-right: 10px;
 	margin-left: 3%;
+	margin-bottom: 8px;
 	background-color: #3a3a3a;
 	color: #d6d6d6;
 	border: 0.5px solid #262626;
@@ -551,4 +550,10 @@ textarea:focus, input:focus{
 	margin-top: 5%;
 	margin-left: 20%;
 	font-size: 15px;
+}
+
+.plusIcon {
+	width: 12%;
+	margin-right: 2%;
+	margin-bottom: 2%;
 }
