--- a/src/index.css
+++ b/src/index.css
@@ -360,9 +360,10 @@ html,body {
 }
 
 #follow{
+	margin-top: 2%;
 	width: 100px;
-	font-size: 12px;
-	height: 50px;
+	font-size: 10px;
+	height: 40px;
 }
 
 #youtubePostButton {
@@ -379,6 +380,7 @@ html,body {
 
 .resUsername{
 	color: #d6d6d6;
+	margin-left: 32%;
 }
 
 .resUsers{
@@ -558,3 +560,12 @@ textarea:focus, input:focus{
 	margin-right: 2%;
 	margin-bottom: 2%;
 }
+
+.profilePicture{
+	width: 120px;
+	height: 90px;
+	border-radius: 50%;
+	object-fit: cover;
+	margin-left: 30%;
+}
+
