--- a/src/index.css
+++ b/src/index.css
@@ -492,15 +492,16 @@ html,body {
 
 .Chatroom {
 	margin-top: 70px;
-	text-align: center;
 }
 
 #chatroomHeadline {
 	color: white;
+	text-align: center;
 }
 
 #chatroomInstructions {
 	color: white;
+	text-align: center;
 }
 
 .footer {
@@ -569,3 +570,24 @@ textarea:focus, input:focus{
 	margin-left: 30%;
 }
 
+.profilePictureChat {
+	width: 70px;
+	height: 50px;
+	border-radius: 50%;
+	object-fit: cover;
+}
+
+.usernameText {
+	color: white;
+	width: 200px;
+	display: block;
+}
+
+.chatPostHead {
+	margin-left: 10px;
+	color: #d6d6d6;
+}
+
+.current {
+	margin-left: 45%;
+}
