--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ html,body {
 	font-family: 'Lato', sans-serif;
 	background: #f0d0b9;
 	background-color: #4B4B4B;
-
+	overflow-y: scroll;
 }
 
 #profilePicture{
@@ -66,16 +66,16 @@ html,body {
 }
 
 .input-group{
-	margin-left: 11%;
+	margin-left: 16%;
 	margin-top: 0;
-	width: 80%;
+	width: 70%;
 }
 
 .material-icons{
-	margin-top: 0px;
-	margin-left: 20px;
-	margin-right: 30%;
-	font-size: 25px;
+	margin-top: -4px;
+	margin-left: 30%;
+	margin-right: 5%;
+	font-size: 22px;
 	color: #d6d6d6;
 
 }
@@ -285,6 +285,7 @@ html,body {
 	margin-bottom: 5px;
 	margin-left:55px;
 
+
 }
 
 .postText {
@@ -307,7 +308,7 @@ html,body {
 	height: 40px;
 	font-size: 10px;
 	margin-top: -5px;
-	margin-left: -11.5%;
+	margin-left: -0%;
 	opacity: 100%;
 	background-color: #3a3a3a;
 	color: #d6d6d6;
@@ -323,6 +324,7 @@ html,body {
 
 .friendFlowArea{
 	margin-top: 0px;
+	margin-bottom: -50px;
 }
 
 .otherProfile {
@@ -334,10 +336,12 @@ html,body {
 	margin-top: 20px;
 	margin-bottom: 0px;
 	color: #d6d6d6;
+
 }
 
 .youtubePostVideo{
 	margin-bottom: 30px;
+	margin-left: -10%;
 }
 
 .FlowVertical {
@@ -353,7 +357,7 @@ html,body {
 }
 
 .ProfilePictureArea{
-	margin-top: 40px;
+	margin-top: 10px;
 	margin-left: -50px;
 }
 
@@ -463,7 +467,13 @@ html,body {
 }
 
 .navbar-toggle{
+	background-color: #d6d6d6;
 	color: #d6d6d6;
+}
+
+.navbar-toggle:active{
+	background-color: #8e8e8e;
+	color: #8e8e8e;
 }
 
 .navbar-toggle:hover{
@@ -475,7 +485,6 @@ html,body {
 }
 
 #dropdownelements{
-	margin-top: 5%;
 	color: #d6d6d6;
 }
 
@@ -599,4 +608,21 @@ textarea:focus, input:focus{
 
 #spaceDiv {
 	padding: 10%;
+}
+
+#shareButtonProfile{
+	margin-left: -26px;
+}
+
+.youtubePostProfile{
+	margin-bottom: -50px;
+}
+
+#form_search{
+	margin-top: -3%;
+	border-color: #d6d6d6;
+}
+
+#input-group_search{
+	margin-top: 1%;
 }
