--- a/src/index.css
+++ b/src/index.css
@@ -90,6 +90,8 @@ html,body {
 
 .clickableUsername {
 	color: white;
+	margin-top: -3%;
+	margin-left: -5%;
 }
 
 .material-icons:active{
@@ -304,7 +306,6 @@ html,body {
 }
 
 .shareButtonProfile {
-	width: 240px;
 	height: 40px;
 	font-size: 10px;
 	margin-top: -5px;
@@ -520,7 +521,7 @@ html,body {
 	left: 0;
 	bottom: 0;
 	width: 100%;
-	height: 10%;
+	height: 8%;
 	background-color: white;
 	color: white;
 	text-align: center;
@@ -572,6 +573,7 @@ textarea:focus, input:focus{
 	width: 12%;
 	margin-right: 2%;
 	margin-bottom: 2%;
+	margin-left: -3%;
 }
 
 .profilePicture{
@@ -583,27 +585,41 @@ textarea:focus, input:focus{
 }
 
 .profilePictureChat {
-	width: 70px;
+	width: 80px;
 	height: 50px;
 	border-radius: 50%;
 	object-fit: cover;
+	margin-right: -1%;
 }
 
-.usernameText {
+.usernameTextChat {
 	color: white;
-	width: 50%;
+	width: 60%;
 	display: block;
 	margin-left: -5%;
+	margin-top: 1%;
+	margin-bottom: -2%;
+}
+
+.textcurrent {
+	color: white;
+	width: 70%;
+	display: block;
+	margin-left: -10%;
+	margin-top: 1%;
+	margin-bottom: -2%;
 }
 
 .chatPostHead {
-	margin-left: 10px;
+	margin-left: 1%;
 	color: #d6d6d6;
 	margin-top: 5px;
+	padding-right: 1%;
+	padding-bottom: 5px;
 }
 
 .current {
-	margin-left: 40%;
+	margin-left: 45%;
 }
 
 #spaceDiv {
@@ -614,10 +630,6 @@ textarea:focus, input:focus{
 	margin-left: -26px;
 }
 
-.youtubePostProfile{
-	margin-bottom: -50px;
-}
-
 #form_search{
 	margin-top: -3%;
 	border-color: #d6d6d6;
@@ -625,4 +637,15 @@ textarea:focus, input:focus{
 
 #input-group_search{
 	margin-top: 1%;
+}
+
+.postTextChat {
+	font-style: italic;
+	font-size: small;
+	margin-top: -2%;
+}
+
+.profileUsername {
+	margin-top: 0%;
+	margin-left: -5%;
 }
