--- a/src/index.css
+++ b/src/index.css
@@ -316,6 +316,17 @@ html,body {
 	border: 0.5px solid #262626;
 }
 
+.shareButtonOtherProfile {
+	height: 40px;
+	font-size: 10px;
+	margin-top: -5px;
+	margin-left: -5%;
+	opacity: 100%;
+	background-color: #3a3a3a;
+	color: #d6d6d6;
+	border: 0.5px solid #262626;
+}
+
 .removeShareButton {
 	opacity: 100%;
 	background-color: #3a3a3a;
@@ -436,7 +447,6 @@ html,body {
 	height: 35px;
 	font-size: 20px;
 	background-color: #363636;
-	margin-top:20px;
 	text-align: center;
 	color: white;
 	font-style: italic;
@@ -446,11 +456,11 @@ html,body {
 	color: #d6d6d6;
 	font-size: 16px;
 	float: center;
+	margin-left: -20px;
 	padding-top: 8px;
 	height: 40px;
 	width: 200px;
 	margin-bottom: 10px;
-	margin-left: 140px;
 	background-color: #3a3a3a;
 }
 
@@ -503,7 +513,7 @@ html,body {
 }
 
 .Chatroom {
-	margin-top: 70px;
+	margin-top: 50px;
 }
 
 #chatroomHeadline {
@@ -521,16 +531,17 @@ html,body {
 	left: 0;
 	bottom: 0;
 	width: 100%;
-	height: 8%;
+	height: 10%;
 	background-color: white;
 	color: white;
-	text-align: center;
 	border-top: 2px solid #4B4B4B;
 	z-index: 10;
+	display: block;
+	padding-top: 1%;
 }
 
 .inputMessage {
-
+	float: center;
 	font-size: 20px;
 	padding: 5px;
 	border: 1px solid #4B4B4B;
@@ -538,9 +549,10 @@ html,body {
 	box-sizing: border-box;
 	color: black;
 	margin-top: 2%;
+	margin-left: 3%;
 }
 
-textarea:focus, input:focus{
+textarea:focus, input:focus, button:focus {
     outline: none;
 }
 
@@ -556,6 +568,7 @@ textarea:focus, input:focus{
 	color: #d6d6d6;
 	border: 0.5px solid #262626;
 	border-radius: 4px;
+	margin-right: -15%;
 }
 
 #welcomeJumbotron{
@@ -570,10 +583,12 @@ textarea:focus, input:focus{
 }
 
 .plusIcon {
-	width: 12%;
-	margin-right: 2%;
+	width: 100%;
+	margin-right: 0%;
 	margin-bottom: 2%;
-	margin-left: -3%;
+	margin-left: 25%;
+	margin-top: 18%;
+	float: left;
 }
 
 .profilePicture{
@@ -598,7 +613,7 @@ textarea:focus, input:focus{
 	display: block;
 	margin-left: -5%;
 	margin-top: 1%;
-	margin-bottom: -2%;
+	margin-bottom: 2%;
 }
 
 .textcurrent {
@@ -607,7 +622,7 @@ textarea:focus, input:focus{
 	display: block;
 	margin-left: -10%;
 	margin-top: 1%;
-	margin-bottom: -2%;
+	margin-bottom: 2%;
 }
 
 .chatPostHead {
@@ -648,4 +663,38 @@ textarea:focus, input:focus{
 .profileUsername {
 	margin-top: 0%;
 	margin-left: -5%;
+}
+
+.chatImage {
+	border: 1px solid #3a3a3a;
+	border-radius: 10px;
+	padding: 0%;
+	height: 40%;
+	width: 40%;
+	margin-left: 10%;
+}
+
+.currentChatImg {
+	border: 1px solid #3a3a3a;
+	border-radius: 10px;
+	padding: 0%;
+	height: 70%;
+	width: 70%;
+	margin-left: 20%;
+}
+
+.ignore {
+	width: 13% !important;
+	margin: 0px;
+}
+
+.pushDiv {
+	margin-left: 18%;
+}
+
+.OtherProfileVideo {
+	text-align: center;
+	margin-bottom: 5px;
+	margin-left: -5%;
+	margin-top: 2%;
 }
